fixed the top header on mobile, hope it works in all cases

--- a/assets/styles/stjean.me.css
+++ b/assets/styles/stjean.me.css
@@ -349,6 +349,7 @@ padding-top:140px;
   width:100%;
   height:100%;
   max-height:400px;
+  min-height:200px;
 }
 
 
